1. Fixed inconsistent transitions during Light/Dark mode switch.

--- a/src/app/components/layout/Footer/Footer.module.css
+++ b/src/app/components/layout/Footer/Footer.module.css
@@ -12,4 +12,5 @@
   transition-property: background-color, color, border-color, fill, stroke;
   transition-duration: 300ms;
   transition-timing-function: ease-in-out;
+  margin-top: auto;
 }
