--- a/src/app/session/[room_code]/SessionPage.module.css
+++ b/src/app/session/[room_code]/SessionPage.module.css
@@ -140,14 +140,17 @@
   .video_and_chat_container {
     flex-direction: column;
     gap: var(--space-8-12px);
+    height: calc(100vh - var(--space-32-48px));
   }
 
   .chat_container {
     width: 100%;
     max-width: none;
     min-width: 0;
-    height: 300px;
+    height: 350px;
     margin-top: 0;
+    display: flex;
+    flex-direction: column;
   }
 
   .chat_toggle_input:not(:checked)~.chat_container {
@@ -166,10 +169,15 @@
 
   .video_container {
     flex: 1;
-    min-height: 250px;
+    min-height: 300px;
+    display: flex;
+    flex-direction: column;
   }
 
   .session_container {
     padding-block: var(--space-4-8px);
+    height: calc(100vh - 120px);
+    display: flex;
+    flex-direction: column;
   }
 }
